--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,12 +40,13 @@ dependencies:
   # package_info_plus: ^1.3.0
   # firebase_messaging: ^11.1.0
   firebase_messaging: ^11.4.1
-  flutter_local_notifications: ^9.1.2
+  # flutter_local_notifications: ^13.0.0
   firebase_core: ^1.10.0
   
   # audioplayers: ^1.1.1
-  audioplayers: ^0.20.1
-  audio_service: ^0.18.7
+  # audioplayers: ^0.20.1
+  just_audio: ^0.9.31
+  audio_service: ^0.18.9
   url_launcher: ^6.0.17
 
   # The following adds the Cupertino Icons font to your application.
@@ -58,10 +59,11 @@ dependencies:
   add_2_calendar: ^2.1.2
   flutter_markdown: ^0.6.9
   fluttertoast: ^8.0.8
-  flutter_inappwebview: ^5.3.2
+  #flutter_inappwebview: ^5.3.2
   
   carousel_slider: ^4.1.1
   firebase_remote_config: ^2.0.20
+  uuid: ^3.0.7
 
 dependency_overrides:
   provider: ^6.0.1
