--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,7 +40,7 @@ dependencies:
   # package_info_plus: ^1.3.0
   # firebase_messaging: ^11.1.0
   firebase_messaging: ^11.4.1
-  # flutter_local_notifications: ^13.0.0
+  flutter_local_notifications: ^9.1.2
   firebase_core: ^1.10.0
   
   # audioplayers: ^1.1.1
@@ -59,7 +59,7 @@ dependencies:
   add_2_calendar: ^2.1.2
   flutter_markdown: ^0.6.9
   fluttertoast: ^8.0.8
-  #flutter_inappwebview: ^5.3.2
+  flutter_inappwebview: ^5.3.2
   
   carousel_slider: ^4.1.1
   firebase_remote_config: ^2.0.20
