--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,11 +25,11 @@
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
 
     <application
-        android:name="com.example.audio_player_boilerplate"
+        android:name="androidx.multidex.MultiDexApplication"
         android:label="Audio Player"
         android:usesCleartextTraffic="true"
         tools:ignore="Instantiatable"
-        android:icon="@mipmap/launcher_icon">
+        android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
             android:launchMode="singleTop"
@@ -40,13 +40,6 @@
             android:exported="true"
             tools:ignore="Instantiatable">
 
-            <meta-data
-                android:name="com.google.firebase.messaging.default_notification_icon"
-                android:resource="@drawable/transparent" />
-
-            <meta-data
-                android:name="com.google.firebase.messaging.default_notification_color"
-                android:resource="@color/colorPrimary" />
             <!-- Specifies an Android theme to apply to this Activity as soon as
                  the
             Android process has started. This theme is visible to the user
@@ -72,11 +65,6 @@
                 android:name="io.flutter.embedding.android.SplashScreenDrawable"
                 android:resource="@drawable/launch_background"
             />
-
-            <meta-data
-                android:name="com.google.firebase.messaging.default_notification_channel_id"
-                android:value="euda_push_notification_heads_up" />
-
 
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
